fix: corrigir erro na rota /posts/findAll no render
