# src/routes/post.route.js
@@ -6,16 +6,16 @@ import { validPost } from "../middlewares/post.middleware.js";
 
 const router = Router();
 
-router.post("/", authMiddleware, create);
+router.post("/create", authMiddleware, create);
 
-router.get("/", findAll);
+router.get("/findAll", findAll);
 router.get("/top", topPosts);
 router.get("/search", searchByTitle);
 router.get("/byUserId", authMiddleware, searchByUserId);
 
 router.get("/:id", authMiddleware, validId, validPost, findById);
 router.patch("/update/:id", authMiddleware, validId, validPost, update);
-router.delete("delete//:id", authMiddleware, validId, validPost, exclude);
+router.delete("delete/:id", authMiddleware, validId, validPost, exclude);
 router.patch("/like/:id", authMiddleware, validId, validPost, like);
 router.patch("/comment/:id", authMiddleware, validId, validPost, addComment);
 router.patch("/comment/:id/:idComment", authMiddleware, validId, validPost, deleteComment)
