# src/routes/user.route.js
@@ -4,9 +4,9 @@ import { validId, validUser } from "../middlewares/global.middlewares.js";
 
 const router = Router();
 
-router.post("/", create);
+router.post("/create", create);
 
-router.get("/", findAll);
+router.get("/findAll", findAll);
 
 router.get("/:id", validId, validUser, findById);
 router.patch("/update/:id", validId, validUser, update);
